--- a/styles.css
+++ b/styles.css
@@ -1,277 +1,266 @@
+/* styles.css */
+
+/* Estilos globais */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
   font-family: "Poppins", sans-serif;
+}
 
-  body {
-    background-color: black;
-    color: white;
-    font-size: 16px;
-    overflow: hidden;
-  }
+body {
+  background-color: black;
+  color: white;
+  font-size: 16px;
+  overflow: hidden;
+}
 
-  header {
-    position: fixed;
-    width: 80vw;
-    left: 50%;
-    transform: translateX(-50%);
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr 600px;
-    gap: 10%;
-    z-index: 2;
+header {
+  position: fixed;
+  width: 80vw;
+  left: 50%;
+  transform: translateX(-50%);
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 600px;
+  gap: 10%;
+  z-index: 2;
+}
 
-    & img {
-      width: 250px;
-    }
+header img {
+  width: 250px;
+}
 
-    & nav {
-      & ul {
-        display: grid;
-        grid-template-columns: repeat(3, 200px);
-      }
+header nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 200px);
+}
 
-      & a {
-        color: white;
-        text-decoration: none;
-      }
+header nav a {
+  color: white;
+  text-decoration: none;
+}
 
-      & a:hover {
-        color: black;
-      }
-    }
-  }
-
-  section {
-    height: 100vh;
-    position: relative;
-
-    & .list {
-      width: 70vw;
-      height: 100%;
-      margin: auto;
-      position: relative;
-
-      & .item {
-        position: absolute;
-        inset: 0;
-
-        & .car-img {
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%);
-          width: 70%;
-
-          & img {
-            width: 100%;
-            transform: rotate(-30deg);
-          }
-
-          &::before {
-            content: "";
-            position: absolute;
-            background-color: black;
-            width: 100%;
-            height: 100px;
-            top: 150%;
-            left: 50px;
-            border: 50%;
-            filter: blur(50px);
-          }
-        }
-      }
-
-      & .content {
-        position: absolute;
-        right: 100px;
-        width: 70%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: end;
-        gap: 20px;
-
-        & .car-information {
-          font-weight: bold;
-        }
-
-        & h2 {
-          font-size: 6.5rem;
-          line-height: 1em;
-          font-family: "League Gothic", sans-serif;
-        }
-
-        & .description {
-          color: #d9d9d9;
-          font-size: 12px;
-          text-align: right;
-          max-width: 400px;
-        }
-
-        & .information {
-          border-radius: 30px;
-          font-size: 15px;
-          height: 35px;
-          width: 120px;
-          text-transform: uppercase;
-          border: 2px solid #000000;
-          background-color: white;
-          color: black;
-          cursor: pointer;
-          font-weight: lighter;
-          font-family: "League Gothic", sans-serif;
-        }
-      }
-
-      &::before {
-        content: "";
-        position: absolute;
-        height: 200px;
-        width: 100%;
-        top: 50%;
-        border-top: 1px solid white;
-      }
-    }
-
-    .indicators {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translateX(-50%);
-      height: 200px;
-      width: 90vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: end;
-      gap: 15px;
-
-      & .number {
-        font-size: 5em;
-        font-family: "League Gothic", sans-serif;
-      }
-
-      & ul {
-        display: flex;
-        gap: 10px;
-
-        & li {
-          width: 50px;
-          height: 5px;
-          background-color: black;
-          border-radius: 5px;
-          transition: 0.5s;
-        }
-
-        & .active {
-          background-color: white;
-        }
-      }
-    }
-
-    .arrows {
-      width: 70vw;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -25px);
-      display: flex;
-      justify-content: space-between;
-
-      & button:nth-child(1) {
-        & img {
-          transform: scale(-1);
-        }
-      }
-
-      & button {
-        top: 60%;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        border: none;
-        cursor: pointer;
-
-        & img {
-          width: 30px;
-          margin-top: 4px;
-          cursor: pointer;
-        }
-
-        &:hover {
-          background-color: #beff1b;
-        }
-      }
-    }
-  }
+header nav a:hover {
+  color: black;
 }
 
 section {
-  & .list {
-    --calculation: 1;
+  height: 100vh;
+  position: relative;
+}
 
-    & .item {
-      transform: translateX(calc(100vw * var(--calculation)));
-      transition: 0.5s;
-      opacity: 0;
+section .list {
+  width: 70vw;
+  height: 100%;
+  margin: auto;
+  position: relative;
+}
 
-      & .car-img {
-        & img {
-          transform: rotate(0);
-          transition: 0.5s;
-          transition-delay: 0.3s;
-        }
-      }
+section .list .item {
+  position: absolute;
+  inset: 0;
+}
 
-      & .content {
-        & .car-information,
-        h2,
-        .description,
-        .information {
-          transform: translateX(calc(200px * var(--calculation)));
-          transition: 0.7s;
-          transition-delay: 0.3s;
-          opacity: 0;
-        }
+section .list .item .car-img {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 70%;
+}
 
-        & h2 {
-          transition-delay: 0.5s;
-        }
+section .list .item .car-img img {
+  width: 100%;
+  transform: rotate(-30deg);
+}
 
-        & .description {
-          transition-delay: 0.7s;
-        }
+section .list .item .car-img::before {
+  content: "";
+  position: absolute;
+  background-color: black;
+  width: 100%;
+  height: 100px;
+  top: 150%;
+  left: 50px;
+  border: 50%;
+  filter: blur(50px);
+}
 
-        & .information {
-          transition-delay: 0.9s;
-        }
-      }
-    }
+section .list .item .content {
+  position: absolute;
+  right: 100px;
+  width: 70%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: end;
+  gap: 20px;
+}
 
-    & .active {
-      transform: translateX(0);
-      transition: 0.5s;
-      opacity: 1;
+section .list .item .content .car-information {
+  font-weight: bold;
+}
 
-      & .car-img {
-        & img {
-          transform: rotate(-20deg);
-        }
-      }
+section .list .item .content h2 {
+  font-size: 6.5rem;
+  line-height: 1em;
+  font-family: "League Gothic", sans-serif;
+}
 
-      & .content {
-        & .car-information,
-        h2,
-        .description,
-        .information {
-          transform: translateX(0);
-          opacity: 1;
-        }
-      }
-    }
-  }
+section .list .item .content .description {
+  color: #d9d9d9;
+  font-size: 12px;
+  text-align: right;
+  max-width: 400px;
+}
+
+section .list .item .content .information {
+  border-radius: 30px;
+  font-size: 15px;
+  height: 35px;
+  width: 120px;
+  text-transform: uppercase;
+  border: 2px solid #000000;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  font-weight: lighter;
+  font-family: "League Gothic", sans-serif;
+}
+
+section .list::before {
+  content: "";
+  position: absolute;
+  height: 200px;
+  width: 100%;
+  top: 50%;
+  border-top: 1px solid white;
+}
+
+.indicators {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 200px;
+  width: 90vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  gap: 15px;
+}
+
+.indicators .number {
+  font-size: 5em;
+  font-family: "League Gothic", sans-serif;
+}
+
+.indicators ul {
+  display: flex;
+  gap: 10px;
+}
+
+.indicators ul li {
+  width: 50px;
+  height: 5px;
+  background-color: black;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
+.indicators ul li.active {
+  background-color: white;
+}
+
+.arrows {
+  width: 70vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -25px);
+  display: flex;
+  justify-content: space-between;
+}
+
+.arrows button:nth-child(1) img {
+  transform: scale(-1);
+}
+
+.arrows button {
+  top: 60%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+}
+
+.arrows button img {
+  width: 30px;
+  margin-top: 4px;
+  cursor: pointer;
+}
+
+.arrows button:hover {
+  background-color: #beff1b;
+}
+
+section .list {
+  --calculation: 1;
+}
+
+section .list .item {
+  transform: translateX(calc(100vw * var(--calculation)));
+  transition: 0.5s;
+  opacity: 0;
+}
+
+section .list .item .car-img img {
+  transform: rotate(0);
+  transition: 0.5s;
+  transition-delay: 0.3s;
+}
+
+section .list .item .content .car-information,
+section .list .item .content h2,
+section .list .item .content .description,
+section .list .item .content .information {
+  transform: translateX(calc(200px * var(--calculation)));
+  transition: 0.7s;
+  transition-delay: 0.3s;
+  opacity: 0;
+}
+
+section .list .item .content h2 {
+  transition-delay: 0.5s;
+}
+
+section .list .item .content .description {
+  transition-delay: 0.7s;
+}
+
+section .list .item .content .information {
+  transition-delay: 0.9s;
+}
+
+section .list .item.active {
+  transform: translateX(0);
+  transition: 0.5s;
+  opacity: 1;
+}
+
+section .list .item.active .car-img img {
+  transform: rotate(-20deg);
+}
+
+section .list .item.active .content .car-information,
+section .list .item.active .content h2,
+section .list .item.active .content .description,
+section .list .item.active .content .information {
+  transform: translateX(0);
+  opacity: 1;
 }
 
 .body-carros {
@@ -302,4 +291,91 @@ section {
   color: black;
   display: flex;
   padding-bottom: 20px;
+}
+
+/* Media Queries para responsividade */
+@media (max-width: 1200px) {
+  header {
+    grid-template-columns: 1fr 400px;
+  }
+
+  header nav ul {
+    grid-template-columns: repeat(3, 150px);
+  }
+
+  section .list .item .content h2 {
+    font-size: 5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    width: 90vw;
+  }
+
+  header nav ul {
+    grid-template-columns: repeat(3, 100px);
+  }
+
+  section .list {
+    width: 90vw;
+  }
+
+  section .list .item .car-img {
+    width: 90%;
+  }
+
+  section .list .item .content {
+    right: 50px;
+    width: 80%;
+  }
+
+  section .list .item .content h2 {
+    font-size: 4rem;
+  }
+
+  .indicators .number {
+    font-size: 3em;
+  }
+
+  .arrows {
+    width: 90vw;
+  }
+}
+
+@media (max-width: 480px) {
+  header {
+    width: 100vw;
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  header nav ul {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  section .list {
+    width: 100vw;
+  }
+
+  section .list .item .car-img {
+    width: 100%;
+  }
+
+  section .list .item .content {
+    right: 20px;
+    width: 90%;
+  }
+
+  section .list .item .content h2 {
+    font-size: 3rem;
+  }
+
+  .indicators .number {
+    font-size: 2em;
+  }
+
+  .arrows {
+    width: 100vw;
+  }
 }
